data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_183.wast
;; 4. **Stack Unwinding with Incorrect Branch**:    - **Description**: Test stack unwinding in a nested loop context where an incorrect branch during stack unwinding leads to execution jumping to the wrong loop level.    - **Constraint**: Ensuring operand stack unwinding correctly and accurately re-establishes the stack to the position when the loop was entered.

(assert_invalid
  (module (func $stack-unwind-wrong-branch
    (block
      (loop (param i32)
        (br 1)))  
    (loop
      (br 0)))
  ))
  "type mismatch"
)